# mlvg

./: .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
examples/app/: CMakeLists.txt  appName.h  copyright.h  main.cpp  signalProcessor.h  testApp.cpp  testApp.h  testAppController.cpp  testAppController.h  testAppParameters.h  testAppProcessor.cpp  testAppProcessor.h  testAppView.cpp  testAppView.h  version.h
examples/app/mac/: Info.plist
examples/clap-plugin/: README.md
examples/clap-plugin/scripts/: debug-plugin.sh  test-plugin.bat  test-plugin.sh
examples/clap-plugin/src/: clap-saw-demo-entry.cpp  clap-saw-demo-gui.cpp  clap-saw-demo-gui.h  clap-saw-demo.cpp  clap-saw-demo.h
examples/plugin/: VST3_SDK.cmake  factoryDefinition.cpp  parameters.h  pluginController.cpp  pluginController.h  pluginEditorView.cpp  pluginEditorView.h  pluginParameters.h  pluginProcessor.cpp  pluginProcessor.h  setPluginInfo.py
examples/plugin/au/: audiounitconfig.h
include/: MLAppView.h  MLDialBasic.h  MLFiles.h  MLPlatformView.h  MLTextButtonBasic.h  MLView.h  MLWidget.h
source/: MLActor.cpp  MLActor.h  MLAppView.cpp  MLAppView.h  MLDialBasic.cpp  MLDialBasic.h  MLDrawContext.cpp  MLDrawContext.h  MLFiles.cpp  MLGUICoordinates.h  MLMath2D.cpp  MLParameters.h  MLPlatformView.h  MLResizer.cpp  MLSVGButton.cpp  MLSVGButton.h  MLTextButtonBasic.cpp  MLTextLabelBasic.cpp  MLToggleButtonBasic.cpp  MLToggleButtonBasic.h  MLView.cpp  MLWidget.h
source/common/: GXEngine.h  GXPropertyTree.h  GXTypes.h  MLAppController.cpp  MLAppController.h  MLAppView.cpp  MLAppView.h  MLDrawContext.cpp  MLDrawContext.h  MLFiles.cpp  MLFiles.h  MLGUICoordinates.h  MLGUIEvent.h  MLMath2D.cpp  MLMath2D.h  MLNativeCode.cpp  MLPlatformView.h  MLSDLUtils.h  MLView.cpp  MLView.h  MLWidget.h
source/include/: mlvg.h
source/native/: MLFilesMac.mm  MLFilesWin.cpp  MLSDLUtils.h  NanoVGViewMacGL.mm  NanoVGViewMacMetal.cpp  NanoVGViewMacMetal.mm  NanoVGViewWindowsGL.cpp
source/widgets/: MLDialBasic.cpp  MLDialBasic.h  MLDrawableImageView.cpp  MLDrawableImageView.h  MLPanel.cpp  MLPanel.h  MLResizer.cpp  MLResizer.h  MLSVGButton.cpp  MLSVGButtonBasic.cpp  MLSVGButtonBasic.h  MLSVGImage.cpp  MLSVGImage.h  MLTextButtonBasic.cpp  MLTextLabelBasic.cpp  MLTextLabelBasic.h  MLToggleButtonBasic.cpp
tests/: catch.hpp  filesTest.cpp  tests.cpp  tests.h
